testdata/ttcn3-conformance-tests/ATS/core_language/06_types_and_values/0602_structured_types_and_values/060209_comm_port_types/NegSyn_060209_CommunicationPortTypes_005.ttcn
/*****************************************************************
 ** @author   STF T003
 ** @version  0.0.1
 ** @purpose  1:6.2.9, Ensure that param allows data types only.
 ** @verdict  pass reject, noexecution
 *****************************************************************/
// Restriction e:
// MessageType shall be a reference to a data type.

module NegSyn_060209_CommunicationPortTypes_005 {

     type record MsgType1 {
        integer f1,
        octetstring f2
    }

	type boolean MsgType2;
	type charstring MsgType3;

    type default MyDefType;

    type port MyMessagePortTypeOne message {
        in MsgType1, MsgType2;
        out MsgType3;
        inout MyDefType    // error: not data type
    }

}